-added malihu-custom-scrollbar-plugin to see if that can help solving scroll issues -tiny style changes to fix tile click response issue

--- a/app/assets/css/tiles_responsive.css
+++ b/app/assets/css/tiles_responsive.css
@@ -6,13 +6,14 @@
 .tiles {
   /* margin-right: -5%; */
   /* padding: 5% 0 0 5%; */
-  width: auto;
-  height: auto;
+   width: auto; 
+   height: auto; 
 
-  /* height: 500px; */
+  /*height: 500px;*/
 
-  /* width: 249px; */
+  /*width: 249px;*/
   overflow: scroll;
+  /*padding-bottom: 15px;*/
   
 }
 
@@ -137,10 +138,11 @@
 }
 .tiles .tile .tile-body {
   /* height: 100%; */
+  /* margin-top: 17px; */
   vertical-align: top;
   padding: 10px 10px;
   overflow: hidden;
-  position: absolute;
+  /* position: absolute; */
   font-weight: 400;
   font-size: 12px;
   color: #000000;
@@ -189,14 +191,14 @@
   color: #000;
 }
 .tiles .tile .tile-body > i {
-  /* margin-top: 10px; */
-  display: block;
+  /*margin-top: 17px;*/
+  /* display: block; */
   font-size: 50px;
   line-height: 50px;
   text-align: center;
 }
 .tiles.tiletypes .tile .tile-body > i {
-  margin-top: 12px;
+  /*margin-top: 12px;*/
   display: block;
   font-size: 45px;
   line-height: 45px;
@@ -227,7 +229,7 @@
   margin-bottom: 5px;
 }
 .tiles .tile .tile-object {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   left: 0;
   right: 0;
